recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:2: error: recursive variable rep needs type
var rep = rep:List[Int]
          ^butLast:5: error: value update is not a member of List[Int]
		rep(i) = l(i)	
                ^